ETL: Postgres to Elasticsearch with Docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,17 +20,15 @@ services:
       - "9200:9200"
     volumes:
       - esdata:/usr/share/elasticsearch/data
-    healthcheck:
-      test: ["CMD-SHELL", "curl -s http://localhost:9200 >/dev/null || exit 1"]
-      interval: 10s
-      timeout: 5s
-      retries: 20
 
   etl:
-    image: python:3.10-slim
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: etl
     working_dir: /app
     volumes:
-      - ./:/app
+      - .:/app
     depends_on:
       - postgres
       - elasticsearch
