--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-psycopg[binary]==3.3.2
+﻿psycopg[binary]==3.3.2
 elasticsearch==9.2.1
 backoff==2.2.1
 python-dotenv==1.2.1
+pydantic==2.6.4
+pydantic-settings==2.2.1
